[gd_scene load_steps=7 format=3 uid="uid://8c7yg47fmh45"]

[ext_resource type="Script" path="res://main.gd" id="1_n536m"]
[ext_resource type="Theme" uid="uid://reixxy2fymu3" path="res://new_theme.tres" id="2_epkic"]
[ext_resource type="PackedScene" uid="uid://c6gb8xtioqkkx" path="res://table.tscn" id="2_uu8r5"]
[ext_resource type="FontFile" uid="uid://cb3a1aglu7cw4" path="res://Envy Code R.ttf" id="3_6lbhf"]
[ext_resource type="Script" path="res://monte_calro.gd" id="5_stiw4"]
[ext_resource type="Script" path="res://graph.gd" id="5_ymnst"]

[node name="Main" type="Node"]
script = ExtResource("1_n536m")

[node name="FileDialogRed" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
theme = ExtResource("2_epkic")
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "/Users/Georg/Desktop/Data"

[node name="FileDialogBlue" type="FileDialog" parent="."]
auto_translate_mode = 1
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
theme = ExtResource("2_epkic")
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
root_subfolder = "/Users/Georg/Desktop/Data"

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_epkic")
current_tab = 3

[node name="Splash Screen" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 1
metadata/_tab_index = 0

[node name="RedTeam" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Background" type="Panel" parent="TabContainer/RedTeam"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -238.5
offset_right = 550.0
offset_bottom = 281.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModelData" parent="TabContainer/RedTeam/Background" instance=ExtResource("2_uu8r5")]
layout_mode = 1
offset_bottom = -275.0

[node name="WeaponData" parent="TabContainer/RedTeam/Background" instance=ExtResource("2_uu8r5")]
layout_mode = 1
offset_top = 270.0
offset_bottom = -5.0

[node name="LoadRedTeam" type="Button" parent="TabContainer/RedTeam"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = -286.5
offset_right = 393.0
offset_bottom = -255.5
grow_vertical = 2

[node name="OptionButtonRed" type="OptionButton" parent="TabContainer/RedTeam"]
layout_mode = 0
offset_left = 439.69
offset_top = 22.975
offset_right = 727.69
offset_bottom = 53.975
theme = ExtResource("2_epkic")
theme_override_fonts/font = ExtResource("3_6lbhf")

[node name="BlueTeam" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Background" type="Panel" parent="TabContainer/BlueTeam"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -550.0
offset_top = -238.5
offset_right = 550.0
offset_bottom = 281.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModelData" parent="TabContainer/BlueTeam/Background" instance=ExtResource("2_uu8r5")]
layout_mode = 1
offset_bottom = -250.0

[node name="WeaponData" parent="TabContainer/BlueTeam/Background" instance=ExtResource("2_uu8r5")]
layout_mode = 1
offset_top = 250.0

[node name="LoadBlueTeam" type="Button" parent="TabContainer/BlueTeam"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = -286.5
offset_right = 393.0
offset_bottom = -255.5
grow_vertical = 2

[node name="OptionButtonBlue" type="OptionButton" parent="TabContainer/BlueTeam"]
layout_mode = 0
offset_left = 439.69
offset_top = 22.975
offset_right = 727.69
offset_bottom = 53.975

[node name="Monte Carlo" type="TabBar" parent="TabContainer"]
layout_mode = 2
script = ExtResource("5_stiw4")
metadata/_tab_index = 3

[node name="SubjectSelection" type="OptionButton" parent="TabContainer/Monte Carlo"]
layout_mode = 2
offset_left = 65.0
offset_top = 45.0
offset_right = 365.0
offset_bottom = 80.0

[node name="SubjectWeaponType" type="OptionButton" parent="TabContainer/Monte Carlo"]
layout_mode = 0
offset_left = 400.0
offset_top = 46.0
offset_right = 515.0
offset_bottom = 81.0
selected = 0
item_count = 2
popup/item_0/text = "Melee"
popup/item_1/text = "Shooting"
popup/item_1/id = 1

[node name="Subject" type="Panel" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -511.0
offset_top = -205.5
offset_right = -61.0
offset_bottom = -5.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModelData" parent="TabContainer/Monte Carlo/Subject" instance=ExtResource("2_uu8r5")]
layout_mode = 1

[node name="TargetSelection" type="OptionButton" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.056
anchor_top = 0.523
anchor_right = 0.317
anchor_bottom = 0.58
offset_left = 0.487999
offset_top = 0.21701
offset_right = -0.18399
offset_bottom = -0.180023

[node name="Target" type="Panel" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -511.0
offset_top = 69.5
offset_right = -61.0
offset_bottom = 269.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModelData" parent="TabContainer/Monte Carlo/Target" instance=ExtResource("2_uu8r5")]
layout_mode = 1

[node name="Graph" type="Panel" parent="TabContainer/Monte Carlo"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -593.0
offset_top = -270.5
offset_right = -52.0
offset_bottom = 279.5
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Graph" type="Control" parent="TabContainer/Monte Carlo/Graph"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_ymnst")

[connection signal="file_selected" from="FileDialogRed" to="." method="_on_file_dialog_red_file_selected"]
[connection signal="file_selected" from="FileDialogRed" to="." method="_on_file_dialog_file_selected"]
[connection signal="file_selected" from="FileDialogBlue" to="." method="_on_file_dialog_blue_file_selected"]
[connection signal="file_selected" from="FileDialogBlue" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="TabContainer/RedTeam/LoadRedTeam" to="." method="_on_load_red_team_pressed"]
[connection signal="item_selected" from="TabContainer/RedTeam/OptionButtonRed" to="." method="_on_option_button_red_item_selected"]
[connection signal="pressed" from="TabContainer/BlueTeam/LoadBlueTeam" to="." method="_on_load_blue_team_pressed"]
[connection signal="item_selected" from="TabContainer/BlueTeam/OptionButtonBlue" to="." method="_on_option_button_blue_item_selected"]
[connection signal="item_selected" from="TabContainer/Monte Carlo/SubjectSelection" to="TabContainer/Monte Carlo" method="_on_subject_selection_item_selected"]
[connection signal="item_selected" from="TabContainer/Monte Carlo/SubjectWeaponType" to="TabContainer/Monte Carlo" method="_on_subject_weapon_type_item_selected"]
[connection signal="item_selected" from="TabContainer/Monte Carlo/TargetSelection" to="TabContainer/Monte Carlo" method="_on_target_selection_item_selected"]
